# plonky2-recursion

./: .gitignore  Cargo.toml
src/recursion/: merge_circuit.rs  mod.rs  wrap_circuit.rs
tests/: integration.rs
